# tap-tiingo

./: .gitignore  README.md  meltano.yml  pyproject.toml  tox.ini
tap_tiingo/: __init__.py  __main__.py  client.py  streams.py  tap.py
tests/: __init__.py  test_core.py
